style.css
*,
*:after,
*:before {
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
}
h1, h2, p, figure {
        margin: 0;
        display: block;
        width: 100%;
}
main {
        margin: 0 1em;
}
section {
        margin-top: 2em;
}

@media all and (min-width: 500px) {
        section {
                margin-top: 4em;
        }
}

@media all and (min-width: 800px) {
        main {
                width: 80%;
                margin: auto;
                max-width: 1200px;
        }
        section {
                margin-top: 6em;
        }
}

/****** navigation ******/
.navbar {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        
        padding: 0;
        margin: 0;
        background: #f7f7f7;
        list-style-type: none;
}
.navbar li {
        text-align: center;
}
.btn {
        text-decoration: none;
        color: #415b59;
        background: #f7f7f7;
        padding: 0.8em;
        display: block;
}
.btn:hover {
        background-color: #dfdfdf;
}

@media all and (min-width: 500px) {
        .navbar {
                flex-flow: row wrap;
        }
        .navbar li {
                flex: 1 1 auto;
        }
        .btn {
                padding: 1.2em;
        }
        .nav-main {
                position: fixed;
                top: 0;
                width: 100%;
                z-index: 1;
        }
}

@media all and (min-width: 800px) {
        .navbar {
                justify-content: flex-end;
        }
        .navbar li {
                flex: 0 0 auto;
        }
}

/****** about me ******/
.portrait {
        border-radius: 50%;
        max-width: 300px;
        width: 100%;
        margin: auto;
        display: block;
}

@media all and (min-width: 500px) {
        #about-me{
                overflow: hidden; /* So parent will grow to fit floated image */
        }
        .portrait {
                float: right;
                margin-left: 1em;
        }
}

/****** portfolio ******/
.flex-row {
        display: flex;
        flex-flow: row wrap;
}
.flex-cell {
        flex: 0 1 auto;
}
figure {
        width: 100%;
        min-width: 300px;
        max-width: 500px;
        margin-top: 1em;
        border: 5px solid #f7f7f7;
        position: relative;
        z-index: 0;
}
figure img {
        width: 100%;
}
figcaption {
        background: #fff;
        position: absolute;
        bottom: 0;
        width: 100%;
        line-height: 3em;
        display: flex;
        justify-content: space-between;
        padding: 0 1em;
}
figcaption i {
        vertical-align: middle;
        color: #dfdfdf;
}
figcaption i:hover {
        color: #f7f7f7;
        cursor: pointer;
}

@media all and (min-width: 500px) {
        figure {
                margin-top: 2em;
        }
}
@media all and (min-width: 800px) {
        .flex-row {
                justify-content: space-between;
        }
        .flex-cell {
                width: 48%;
        }
        figure {
                margin-top: 4em;
        }
}

/****** contact ******/
@media all and (min-width: 500px) {
}
@media all and (min-width: 800px) {
}

/****** footer ******/
@media all and (min-width: 500px) {
}
@media all and (min-width: 800px) {
}

